added cs170 lecture 7

--- a/CS170/.vscode/settings.json
+++ b/CS170/.vscode/settings.json
@@ -8,5 +8,14 @@
         "**/*.out": true,
         "**/*.synctex": true,
         "**/*.thm": true
+    },
+    "files.exclude": {
+        "**/*.aux": true,
+        "**/*.fdb_latexmk": true,
+        "**/*.fls": true,
+        "**/*.log": true,
+        "**/*.out": true,
+        "**/*.synctex": true,
+        "**/*.thm": true
     }
 }
